# TBO

./: .gitignore  README.md  index.html  package-lock.json  package.json  setup.sh  tailwind.config.js  tsconfig.json
.github/workflows/: android.yml  apply-all-fixes.yml  apply-mobile-update.yml  build.yml  cleanup-workflows.yml  deploy-android-manifest.yml  deploy-complete (1).yml  deploy-complete.yml  fix-all-imports.yml  fix-all-ts-errors.yml  fix-all.yml  fix-android-and-performance (1).yml  fix-android-and-performance.yml  fix-android-crash-plugins.yml  fix-android-db-path.yml  fix-android-final.yml  fix-android-storage-permission.yml  fix-builder-cfg.yml  fix-capabilities-v2.yml  fix-capabilities.yml  fix-foldercard.yml  fix-library.yml  fix-name-and-ts.yml  fix-reader-window.yml  fix-signing.yml  fix-tauri-imports.yml  fix-tauriconf (1).yml  fix-tauriconf-v2 (2).yml  fix-tauriconf-v2.yml  fix-ts-errors.yml  fix-tsconfig.yml  macos.yml
src/: App.tsx  index.css  main.tsx  tauri-shims.d.ts  usePlatform.ts
src-tauri/: AndroidManifest.xml  Cargo.toml  tauri.conf.json
src-tauri/android-custom/: build.gradle.kts
src-tauri/capabilities/: default.json  migrated.json
src-tauri/icons/: icon.icns  make_icns.sh
src-tauri/src/: lib.rs  main.rs
src/components/: ComicCard.tsx  ComicDetail.tsx  CoverStack.tsx  FolderCard.tsx  FolderGroup.tsx  Library.tsx  Reader.tsx  ReaderWindow.tsx  Settings.tsx  Sidebar.tsx
src/mobile/: MobileApp.tsx  usePlatform.ts
src/store/: coverQueue.ts  index.ts  pageQueue.ts  panelDetector.ts
src/types/: index.ts
