[package]
name = "panels"
version = "0.1.0"
description = "Panels — Comic Reader & Library Manager"
authors = []
edition = "2021"
default-run = "panels"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "panels_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "0.6"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
# jpeg only — no PNG/WebP/GIF/TIFF decoders compiled in (saves ~10MB)
image = { version = "0.24", default-features = false, features = ["jpeg"] }

# ── Desktop release (macOS/Windows/Linux) ────────────────────────────────────
[profile.release]
opt-level = 2          # balanced speed/size for desktop
lto = "thin"           # link-time optimisation
codegen-units = 4      # faster compile, still good output

# ── Android release — optimise hard for binary size ──────────────────────────
# Used by the CI with: cargo build --profile release-android
[profile.release-android]
inherits = "release"
opt-level = "z"        # optimise for size (not speed)
lto = "fat"            # full LTO — biggest size reduction
codegen-units = 1      # single codegen unit for best LTO
strip = true           # strip ALL debug symbols
panic = "abort"        # no unwinding machinery (~500KB saved)
