[package]
name = "panels"
version = "0.1.0"
description = "Panels — Comic Reader & Library Manager"
authors = []
edition = "2021"
default-run = "panels"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "panels_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "0.6"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
# jpeg only — no PNG/WebP/GIF/TIFF decoders compiled in (saves ~10MB)
image = { version = "0.24", default-features = false, features = ["jpeg"] }

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

# ── Release profile (macOS + Android) ────────────────────────────────────────
# opt-level=z + fat LTO + strip cuts the Android APK from ~700MB to ~20-30MB.
# macOS binaries also benefit — slightly slower compile, noticeably smaller app.
[profile.release]
opt-level = "z"       # optimise for size
lto = "fat"           # full link-time optimisation (biggest size reduction)
codegen-units = 1     # required for fat LTO
strip = true          # strip all debug symbols
panic = "abort"       # no unwinding machinery (~500KB saved)
