[package]
name = "panels"
version = "0.1.0"
description = "Lector TBO — Comic Reader & Library Manager"
authors = []
edition = "2021"
default-run = "panels"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[lib]
name = "panels_lib"
crate-type = ["lib", "staticlib", "cdylib"]

[dependencies]
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
zip = "0.6"
base64 = "0.21"
uuid = { version = "1", features = ["v4"] }
regex = "1"
chrono = { version = "0.4", features = ["serde"] }
walkdir = "2"
rayon = "1"
image = { version = "0.24", features = ["jpeg"] }
lopdf = "0.31"

[target.'cfg(not(target_os = "android"))'.dependencies]
tauri = { version = "2" }
unrar = "0.5"

[target.'cfg(target_os = "android")'.dependencies]
tauri = { version = "2", features = ["android"] }
jni = "0.21"

[features]
custom-protocol = ["tauri/custom-protocol"]
default = ["custom-protocol"]

# Release: safe settings that work with bundled SQLite on macOS
[profile.release]
opt-level = 2
